# server

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
api/v1/services/: usuarioService.py
api/v1/services/impl/: usuarioServiceImpl.py
core/: .env copy  configs.py  database.py  security.py
