[tool.poetry]
name = "alloneproject"
version = "0.1.0"
description = ""
authors = ["FelipeHardmann <fashardmann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
pytz = "^2023.3.post1"
python-jose = "^3.3.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
